cmake_minimum_required(VERSION 3.25)
project(PTA)

set(CMAKE_CXX_STANDARD 17)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/main.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/L1-7_分寝室.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/L1-8_谁管谁叫爹.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/L2-1_堆宝塔.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/L2-2_天梯赛的赛场安排.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/L2-3_锦标赛.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-6_机工士姆斯塔迪奥.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-7_随机输一次.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-8_插松枝.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-15_均是素数.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-9_老板的作息表.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-10_智能护理中心统计.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-11_大众情人.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/6-1_二叉树的递归遍历.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/6-2_二叉排序树查找操作.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-1_浦島太郎の玉手箱開き.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-1_浦島太郎の玉手箱開き2.cpp)
add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-1_图的深度优先搜索.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-5_四数和.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-3_二分搜索.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/二进制浮点数计算器.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-3_贪心算法.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-3_LCS.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-3_LCS.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-4_贝茜放慢脚步.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-2_完全二叉树权值.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-14_矩阵列平移.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-13_龙龙送外卖.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/7-12_静的推荐.cpp)
#add_executable(PTA  2023春程序设计进阶实践第一周练习题/P1486_[NOI2004] 郁闷的出纳员.cpp)